--- a/src/pages/register/register.css
+++ b/src/pages/register/register.css
@@ -32,6 +32,7 @@ img:hover{
     background-color: white;
     margin: 20px auto;
     padding: 20px;
+    box-shadow: 0px 0px 20px rgba(0,0,0,0.5);
 }
 h2{
     text-align: center;
