--- a/src/components/left-nav/left-nav.css
+++ b/src/components/left-nav/left-nav.css
@@ -1,3 +1,17 @@
 .left-nav{
     color: white;
 }
+.left-nav-header{
+    background-color: #070e26;
+    width: 100%;
+    display: flex;
+    align-items: center;
+}
+
+.left-nav-header img{
+    margin: 10px 10px 10px 10px;
+}
+.left-nav-header h1{
+    color: white;
+    margin-bottom: 0px;
+}
